fixing project title spacing

--- a/src/app/component/Projects.module.css
+++ b/src/app/component/Projects.module.css
@@ -41,7 +41,7 @@
     padding: 40% 0;
   }
   .projectsTitle{
-    padding: 20% 0;
+    padding-top: 20%;
   }
 
   .projectsContainer {
